# backup-google-sheets

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: backups.py  integrations.py  schedules.py  sheets.py  storage.py
app/core/: config.py  scheduler.py  sheets_service.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/models/: __init__.py  backup.py  backup_schedule.py  integration.py  schedule.py  sheet.py
app/schemas/: backup.py  backup_schedule.py  bitrix.py  integration.py  schedule.py  sheet.py
app/services/: __init__.py  backup_service.py  google_service.py  integration_service.py  schedule_service.py
app/services/storage/: __init__.py  base_storage.py  bitrix_disk_storage.py  local_storage.py
static/css/: style.css
static/js/: main.js
templates/: backups.html  base.html  index.html  integrations.html  schedules.html  sheets.html
